# OLOG

./: CMakeLists.txt  README.md
lib/include/OLOG/: Log.hpp  Measurement.hpp  OLOG.hpp
lib/src/: Log.cpp  Measurement.cpp  OLOG.cpp
test/src/: main.cpp
